# BabyMonitorClient

./: ApiClient.cpp  ApiClient.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraControls.qml  CameraSettingsMenu.qml  CameraStreamView.qml  Config.h  CustomSlider.qml  MainView.qml  README.md  SensorController.cpp  SensorController.h  SensorView.qml  StreamController.cpp  StreamController.h  StreamView.qml  app release.txt  main.cpp  rpicm5.crt
